ContactUtil.java pour factoriser (SOLID - DRY) phone et adresse